# amr-gnn-agent

./: .dockerignore  .gitignore  0001-fix-error.patch  AMR-GNN耐药性预测系统.bat  Dockerfile  Dockerfile.predict  README.md  agent.py  app.py  app.txt  config.yaml  docker-compose.yml  models.py  predict.py  predict.txt  pyproject.toml  test_specific_isolates.py  一键启动.bat  启动前端界面.bat  启动后端服务.bat  启动服务.bat
conf/: explain.yaml
frontend/: README.md  fake_preprocess_api.py  frontend.py  main.py  pyproject.toml
preprocess/: Dockerfile.preprocess  config.yaml  fake_preprocess_api.py
preprocess/.snakemake/metadata/: Li4vZXhwZXJpbWVudHMvcHJlcHJvY2Vzcy9yZXN1bHRzL2VkZ2VfbWF0cmljZXMvZmNncl9hZGpfbWF0cml4LmNzdg==  Li4vZXhwZXJpbWVudHMvcHJlcHJvY2Vzcy9yZXN1bHRzL2VkZ2VfbWF0cmljZXMvc25wc19hZGpfbWF0cml4LmNzdg==
src/: amr_gnn.py  api.py  explain_api.py  models.py  predict.py
