[project]
name = "amr-gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "biopython>=1.86",
    "captum>=0.8.0",
    "einops==0.7.0",
    "fastapi>=0.136.1",
    "hydra-core>=1.3.2",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "lightning==2.2.0",
    "pandas==2.2.0",
    "scikit-learn==1.4.0",
    "seaborn==0.13.2",
    "snakemake>=9.20.0",
    "streamlit>=1.57.0",
    "torch-geometric==2.4.0",
    "uvicorn>=0.46.0",
]
